# nwo-eml-regression

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: paper_reference.md
examples/: rediscover_sine.py
src/nwo_eml/: __init__.py  cli.py  operator.py  regressor.py  simplify.py  tree.py
tests/: test_operator.py  test_regressor.py
